Clases/Clase7/Ejemplo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: so1-clase7
spec:
  ports:
  - port: 3300
    protocol: TCP
    targetPort: 3300
  selector:
    app: node-app
  type: NodePort
